<resources>
    <string name="app_name">MercadoLibreApp</string>
    <string name="content_description_place_image">description</string>
    <string name="error_no_available_data">No data available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Precio</string>
    <string name="seller">Vendedor</string>
    <string name="rating_seller">Rating</string>
    <string name="product_stock">Disponibles</string>
    <string name="product_address">Dirección</string>
    <string name="product_shiping">Tipo de envio</string>
</resources>